--- a/src/lsp/CMakeLists.txt
+++ b/src/lsp/CMakeLists.txt
@@ -5,4 +5,4 @@ target_sources(
                     ${CMAKE_CURRENT_SOURCE_DIR}/Lsp.cpp)
 
 target_include_directories(lsp PRIVATE)
-target_link_libraries(lsp PRIVATE coverage_config)
+target_link_libraries(lsp PRIVATE coverage_config nlohmann_json::nlohmann_json)
